--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
         work correctly both with client-side routing and a non-root public URL.
         Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>首頁 | ZScss</title>
+        <!-- <title>首頁 | ZScss</title> -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-VR0G8YECQY"></script>
         <script>
             // GA use
